0.5.9 2020-08-xx
    - Add $node.isBlank() method; mapped to raw xmlIsBlankNode() method.
0.5.8 2020-08-07
    - Add :%ns option to node find(), find-nodes(), find-value(), exists(),
      xpath-context(), and xpath context new() method.
0.5.7 2020-08-06
    - Indicate position of parsing errors (Perl port) #15
    - Hide reader op() methods from backtrace
    - Make it illegal to move a DTD owned by one document into another.
      This prevents the subsequent memory management and valgrind errors
      noted in #35. A cloned copy of the Dtd can be inserted:
          $to-doc.setInternalSubset: $from-doc.getInternalSubset.clone();
0.5.6 2020-07-13
    - Hide validate() methods from backtrace
    - Tweak multi candidate parse(_U:) and parse($) candidates to
      ensure all options are processed by the parser.
0.5.5 2020-07-07
    - Changed LibXML::HashMap node handling:
      -- Store nodes directly; avoid coercement to node-sets
      -- Remove XPathDomain subset (now the same as XPathRange)
0.5.4 2020-07-04
    - Add live object metrics to 11memory.t.
    - Add LibXML::Parser::Context.publish() method with early
      destruction of xmlParserCtxt objects. Reduce number of live
      objects and memory usage #45
0.5.3 2020-07-02
    - Add LibXML::HashMap; bindings to xmlHashTable.
    - Use it for node lists and sets associative interfaces #43
    - Fix double referencing of node-set elements #44
0.5.2 2020-06-18
    - Fix #42 .parent() on root element dying
0.5.1 2020-06-18
    - Fix #41 getElementsByXxxx() order scrambling (broken in 0.5.0)
0.5.0 2020-06-17
    - #36 fixed install failure / Dtd premature free issue
    - #38 Performance improvements and bench-marking
      -- Convert node and XPath object classes to CPointer representations. This
         allows for faster lower-memory thrifty stantation of objects via nativecast.
      -- .native() methods and options have globally renamed to .raw() ('native' no longer