@@ -1,5 +1,7 @@
 0.5.9 2020-08-xx
     - Add $node.isBlank() method; mapped to raw xmlIsBlankNode() method.
+    - Fix LibXML::DocumentFragment error handling to return structured
+      X::LibXML::Parser exceptions; similar to LibXML::Parser.
 0.5.8 2020-08-07
     - Add :%ns option to node find(), find-nodes(), find-value(), exists(),
       xpath-context(), and xpath context new() method.
